static/estilo.css
*{box-sizing:border-box;}
body{
  font-family:Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
  background-color:#2e4054;
  margin: 0px;
  color: #bed2e0;
}
a{
  text-decoration: none;
  color:#cc274c;
}
.menu{
    float:left;
    width:20%;
    text-align:center;
}
.menuitem{
    background-color:#cc274c;
    padding:8px;
    margin-top:7px;
}
.header{
    background-color:#bed2e0;
    padding:20px;
    text-align:center;
}
h1,h3{color:#2e4054;}
.sticky{
  display: block;
  width: auto;
  padding: 0px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: #cc274c;
}
.half{
  color: #bed2e0;
  float:left;
  width: 50%;
  padding: 0px 0px 0px 10px;
  border: 0px;
}
.counter{
  color: #bed2e0;
  float:left;
  width: 50%;
  padding: 0px 10px 0px 10px;
  border: 0px;
}
#currtime {
  margin-bottom: -3px;
  text-align: left;
  font-size: x-large;
  font-weight: normal;
}
/*2 columns*/
.column{
    float:left;
    width: 50%; /*for 3 ->33.3%*/
    padding:10px;
    border:0px;
}

.row:after{
    content:"";
    display:table;
    clear:both;
    padding:0px;
}
.current .row{border-radius: 10px;}
.current{
  /*background-color: #2e4054;
  border-radius: 10px;*/
  border: 0px;
}
.current h1, .current h2, .current p{
  color: #bed2e0;
}
.xtra{
  background-color: #bed2e0;
  border-radius: 10px;
}
.xtra h4, .xtra p{
  color: #2e4054;
}
.col3{
  float:left;
  width: 33.33%;
  text-align: center;
  border:0px;
  /*border-radius: 50%;
  width: 140px;
  height: 140px;*/
  padding: 0px;
  margin: 3px;
}
.col4{
  float: left;
  width: 25%;
  text-align: center;
}
label{display: inline-block;}

div table{padding: 0px;}
.bottom-left{
  border:0px;
  position:absolute;
  top:50%;/*8px;*/
  left:50%;/*16px;*/
  transform:translate(-50%,-50%);}
.container{
  border:0px;
  position:relative;
  color:#cc274c;
}
panel2,.flip{
  font-size:16px;
  padding:10px;
  text-align:center;
  background-color:#2e4054;
  color:white;
  border:solid 1px #cc274c;
  margin:auto;
}
#panel2{display:none;}
div{
  /*opacity:0.8;filter:alpha(opacity=10);*/
  border:1px dashed #bed2e0;
  padding:15px;
  text-align:left;/*justify;*/
}
.clearfix::after{
  content:"";
  clear:both;
  display:table;
}
.clearfix{border: 0px;}
.img2{float:right;}
/*menu dropdown*/
ul{
  list-style-type:none;
  margin:0;padding:0px;
  overflow:hidden;/*border:1px solid #e7e7e7;*/
  /*background-color:#cc;*/
}
li{
  float:left;
  width:25%;
  color:#2e4054;
}
li a, .dropbtn{
  display:block;/*inline-block*/
  color:#bed2e0;/*#665;*/
  text-align:center;
  padding:14px 10px;
  text-decoration:none;
  border-radius: 5px;
  /*border: 1px dashed #2e4054;*/
}
/*li a:hover, .dropdown:hover .dropbtn{background-color:#2e4054;}*/
li.dropdown{display:inline-block;}
.dropdown-content{
  display:none;
  padding:0px;
  position:absolute;
  min-width:120px;
  width:25%;
  box-shadow:0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index:1;
}
.dropdown-content a{
  padding:12px 16px;
  text-decoration:none;
  display:block;
  text-align:center;
}
.dropdown-content a:hover{background-color:#f1f1f1;}
.dropdown:hover .dropdown-content{display:block;}
/*Table schedule*/
#myday{
  border-collapse:collapse;
  width:100%;
}
#myday td,#myday th{
  border:1px solid #ddd;
  padding:10px;
  text-align:center;
  background-color:#bed2e0;
  color:#2e4054;
}
#myday tr:nth-child(even){background-color:#cc274c;}
#weather_bar{
  text-align: center;
}
svg text{fill:#bed2e0;}
svg line, svg path {stroke:#bed2e0;}
/*table cols title
#myday th{
    padding-top:12px;
    padding-bottom:12px;
    text-align:left;
    background-color:#4caf50;
    color:white;
}*/

.accordion{
  background-color:#bed2e0;
  cursor:pointer;
  padding:18px;
  width:100%;
  border:none;
  outline:none;
  font-size:18px;
  transition:0.4s;
}
.active /*, .accordion:hover*/{background-color:#cc274c;}
.accordion:after{
  content: '\02C5';/*'\02795'*/background-color: #bed2e0;
  font-size:15px;float:right;margin-left:5px;
}
.active:after{
  content: '\005E';/*"\02796";*/
  background-color: #cc274c;
  color:#bed2e0;
}
.panel{
  padding:0 18px;
  display:none;
  background-color:#e5e5e5;
  overflow:hidden;
}
button{/*background-color:white;#4caf50;*/
  text-align:center;
}
.copy-left{
  display:inline-block;
  text-align:right;margin:0px;
  -moz-transform:scaleX(-1);
  -o-transform:scaleX(-1);
  -webkit-transform:scaleX(-1);
  transform:scaleX(-1);
  filter:FlipH;-ms-filter:"FlipH";
}
footer .row{border: 0px;}
/*Didnt work for D3JS and PHP
.bar-old{fill:#98A2A9;}
.bar-new{fill:#cc274c;}*/
/*Responsive layout to stack cols on top of each other
@media only screen and (max-width:620px){
*/
@media (max-width:800px){
  .sticky{
    position:static;
  }
  .menu, .column{
    width:100%;
    text-align: justify;
  }
  svg{
    width: 100%;
    padding: 0px;
  }
  svg.g.rect{
    width:50%;
  }
  #currtime{font-size: large;}
  li{width:100%;}
  .dropdown-content{width:50%;}
  .col3{
    width: 110px;
    margin: 1px;
  }
}

